k8s/base/apps/jellyfin/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-route
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway # Your existing Gateway
      namespace: traefik
  hostnames:
    - "jellyfin.internal.sock1000kg.io.vn"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 8096
